--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
     <!-- Header -->
+        <input id="close-menu" class="close-menu" type="checkbox" aria-label="close-menu" role="button"></input>
+        <label class="close-menu-label" for="close-menu" title="close menu"></label>
         <div class="barra">
             <div class="menu-centro">
                 <div class="barra-conteiner">
@@ -81,7 +83,7 @@
     <!-- Projetos simplificados -->
     <section id="projetos">
         <div class="centralizador-projetos">
-            <h2 class="titulo-projeto">Projeto</h2>
+            <h2 class="titulo-projeto">Projetos</h2>
             <div class="projetos-itens">
                 <div class="blank">
                     <div class="breve">
