--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
@@ -88,11 +89,8 @@
         <div class="centralizador-projetos">
             <h2 class="titulo-projeto">Projetos</h2>
             <div class="projetos-itens">
-                <div class="blank">
-                    <div class="breve">
-                        <p>Em breve</p>
-                    </div>
-                </div>
+                <a class="projeto1" href="https://calendario-responsivo.vercel.app/" target="_blank">
+                </a>
                 <div class="blank">
                     <div class="breve">
                         <p>Em breve</p>
