--- a/index.html
+++ b/index.html
@@ -89,18 +89,9 @@
         <div class="centralizador-projetos">
             <h2 class="titulo-projeto">Projetos</h2>
             <div class="projetos-itens">
-                <a class="projeto1" href="https://calendario-responsivo.vercel.app/" target="_blank">
-                </a>
-                <div class="blank">
-                    <div class="breve">
-                        <p>Em breve</p>
-                    </div>
-                </div>
-                <div class="blank">
-                    <div class="breve">
-                        <p>Em breve</p>
-                    </div>
-                </div>
+                <a class="projeto1" href="https://calendario-responsivo.vercel.app/" target="_blank"><p>Um calendário responsivo desenvolvido com HTML, CSS e JavaScript.</p></a>
+                <a class="projeto2" href="https://projeto-de-formulario.vercel.app/" target="_blank"><p>Página com elemento que retorna nome, endereço e idade.</p></a>
+                <a class="projeto3" href="https://formulario-incrementado.vercel.app/" target="_blank"><p>Formulário feito com HTML, CSS, JavaScript com validacão e retorno dos dados enviados.</p></a>
             </div>
             <div class="repositorio">
                 <a class="github" href="https://github.com/ELeo10?tab=repositories" target="_blank">Repositório no GitHub</a>
